<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/touch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/point_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_place" />

        <TextView
            android:id="@+id/point_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_place" />

        <TextView
            android:id="@+id/point_moment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moment_place" />

        <TextView
            android:id="@+id/point_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moment_pressure" />

        <TextView
            android:id="@+id/gyroscope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyroscope" />

        <TextView
            android:id="@+id/accelerator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accelerator" />

        <TextView
            android:id="@+id/orientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orientation" />

        <TextView
            android:id="@+id/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>